Update to 24w12a, remove sprinting particles